--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@mui/x-data-grid": "^8.5.2",
     "@mui/x-date-pickers": "^8.5.2",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
